# MyLogger

./: .gitignore  AGENTS.md  Cargo.toml  neovim-guide.md  readme.md
asplugin/: README.md  build.gradle.kts  settings.gradle.kts
asplugin/src/main/kotlin/com/dingyong/mylogger/asplugin/: ExportBreakpointsAction.kt
backend/: analysis_server.py  extract_breakpoint_sources.py
chrome/: README.md  manifest.json  mytools.htm  package-lock.json  package.json  popup.html  popup.js  viewer.css  viewer.html  viewer.js
crates/mylogger-cli/: Cargo.toml
crates/mylogger-cli/src/: main.rs
crates/mylogger-core/: Cargo.toml
crates/mylogger-core/src/: analyze.rs  lib.rs  model.rs  parser.rs  report.rs  router.rs  workflow.rs
crates/mylogger-llm/: Cargo.toml
crates/mylogger-llm/src/: lib.rs
crates/mylogger-tools/: Cargo.toml
crates/mylogger-tools/src/: adb.rs  capture.rs  lib.rs  service.rs
crates/mylogger-tui/: Cargo.toml
crates/mylogger-tui/src/: lib.rs
docs/: chrome-log-viewer-roadmap.md  chrome-web-store-publishing.md  chrome-web-store-single-purpose.md  log-analysis-tools-research.md  mylogger-chrome-user-guide-en.md  mylogger-chrome-user-guide.md  mylogger-interactive-agent-framework.md  mylogger-product-design.md  privacy-policy.html
skills/my-logger/: SKILL.md
skills/my-logger/agents/: openai.yaml
skills/my-logger/references/: android-log-patterns.md  filter-log.md  neovim-log-highlighting.md  start-backend-service.md  view-log.md
