[workspace]
members = [
    "crates/mylogger-cli",
    "crates/mylogger-core",
    "crates/mylogger-tools",
    "crates/mylogger-tui",
    "crates/mylogger-llm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
crossterm = "0.29"
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
unicode-width = "0.2"
