[package]
name = "mylogger-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
mylogger-core = { path = "../mylogger-core" }
mylogger-tools = { path = "../mylogger-tools" }
ratatui.workspace = true
unicode-width.workspace = true
